--- a/irent.html
+++ b/irent.html
@@ -29,7 +29,9 @@
 </head>
 
 <body>
-
+     <div class="box-logo">
+         <a href="index.html"><img src="img/logo.png" width="80" alt="Logo"></a>
+     </div>
     <!-- Preloader -->
     <div id="preloader">
         <div class="pre-container">
@@ -58,6 +60,8 @@
 
         <div class="col-md-9">
             <p>iRent is an app which is used to book a rental car anywhere and anytime. </p>
+            <img src="img/irent_0.jpg" alt="" class="img-responsive" />
+            <br>
             <h4>New Functions Added</h4>
             <ul>
               <li>Select the car rental location in map view or list view</li>
