--- a/banner_1.html
+++ b/banner_1.html
@@ -29,7 +29,9 @@
 </head>
 
 <body>
-
+    <div class="box-logo">
+         <a href="index.html"><img src="img/logo.png" width="80" alt="Logo"></a>
+    </div>
     <!-- Preloader -->
     <div id="preloader">
         <div class="pre-container">
