--- a/banner_2.html
+++ b/banner_2.html
@@ -29,7 +29,9 @@
 </head>
 
 <body>
-
+    <div class="box-logo">
+         <a href="index.html"><img src="img/logo.png" width="80" alt="Logo"></a>
+    </div>
     <!-- Preloader -->
     <div id="preloader">
         <div class="pre-container">
@@ -58,9 +60,10 @@
         </div>
 
         <div class="col-md-9">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Develop the themes of marketing event.</p>
+            <p>Design and modify products images with Photoshop and Illustrator.</p>
         </div>
-
+        <br>
         <div class="col-md-3">
             <ul class="cat-ul">
                 <li><i class="ion-ios-circle-filled"></i> 2014</li>
