--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>YuHsin Wang l Portfolio</title>
-    <link rel="icon" href="img/fav.png" type="image/x-icon">
+    <link href="img/favicon.ico" rel="icon" type="image/x-icon"/>
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <!-- Bootstrap -->
