--- a/at501.html
+++ b/at501.html
@@ -60,9 +60,7 @@
         </div>
 
         <div class="col-md-9">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae et gubernationis ultimum cum ultimo sapientiae comparatur. </p>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae et gubernationis ultimum cum ultimo sapientiae comparatur. </p>
+            <p>Images of a happy family and an elderly father who is hugged by his daughter deliver the core concept of the product: Circle of love. </p>
         </div>
 
         <div class="col-md-3">
