--- a/circo_web.html
+++ b/circo_web.html
@@ -60,7 +60,8 @@
         </div>
 
         <div class="col-md-9">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae et gubernationis ultimum cum ultimo sapientiae comparatur.</p>
+            <p>Circo is a wearable smart tracking device.</p>
+            <P>l used the app screenshots to display how to use the app. Also, I used some scenario images to show when the customers can use the functions. </p>
         </div>
 
         <div class="col-md-3">
