--- a/line_stamp.html
+++ b/line_stamp.html
@@ -60,9 +60,7 @@
         </div>
 
         <div class="col-md-9">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae et gubernationis ultimum cum ultimo sapientiae comparatur.</p>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae et gubernationis ultimum cum ultimo sapientiae comparatur.</p>
+            <p>In order to present clearly the stamp from the mobile screen, establish the color system that is more vivid than real sloths. </p>
         </div>
 
         <div class="col-md-3">
