--- a/at502.html
+++ b/at502.html
@@ -60,9 +60,7 @@
         </div>
 
         <div class="col-md-9">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae et gubernationis ultimum cum ultimo sapientiae comparatur. </p>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae et gubernationis ultimum cum ultimo sapientiae comparatur. </p>
+            <p>Use the triangle design of emergency help button of Circo S device as symbol. Design maps and pins on the outlook of the box. </p>
         </div>
 
         <div class="col-md-3">
