--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
            <h3 class="uppercase">About Me </h3>
            <h5>Hi, I'm YuHsin</h5>
            <div class="h-30"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae et gubernationis ultimum cum ultimo sapientiae comparatur.</p>
+            <p>I graduated from National Taiwan University of Arts in 2010. My major was Visual Communication Design.</p>
 
-            <p>Tum ille cum ipse tantum librorum habeas, quos hic tandem requiris. Esse enim quam vellet iniquus iustus poterat inpune. </p>
+            <p>I specialize in App UI and UX design and the visual design of websites.</p>
+            <P>Nice to meet you and please check out my works to know more details!</P>
             <div class="contact-info">
                 <p><i class="ion-android-call"></i> +886 919 696 578 </p>
                 <p><i class="ion-ios-email"></i> horo3355@gmail.com </p>
