--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
            <h3 class="uppercase">About Me </h3>
            <h5>Hi, I'm YuHsin</h5>
            <div class="h-30"></div>
-            <p>I graduated from National Taiwan University of Arts in 2010. My major was Visual Communication Design.</p>
-
+            <p>I graduated from National Taiwan University of Arts in 2010.</P>
+            <P>My major was Visual Communication Design.</p>
+            <P>I am an UX/UI Designer. I currently work as a UI designer at Athentek.</P>
             <p>I specialize in App UI and UX design and the visual design of websites.</p>
             <P>Nice to meet you and please check out my works to know more details!</P>
             <div class="contact-info">
