--- a/banner_1.html
+++ b/banner_1.html
@@ -50,6 +50,8 @@
     <div class="container main-container">
         <div class="col-md-12">
             <img src="img/tableware_1_1920.jpg" alt="" class="img-responsive" />
+            <img src="img/tableware_2_a.jpg" alt="" class="img-responsive" />
+            <img src="img/tableware_2_1920.jpg" alt="" class="img-responsive" />
             <div class="h-30"></div>
         </div>
 
