--- a/circo_app.html
+++ b/circo_app.html
@@ -78,6 +78,8 @@
                 <li><a href="https://itunes.apple.com/tw/app/circo./id1027273156?l=zh&mt=8%E2%80%A8" target="_blank">iOS</a></li>
                 <li><a href="https://play.google.com/store/apps/details?id=com.athentek.circo.main&hl=zh-TW%E2%80%A8" target="_blank">ANDROID</a></li>
             </ul>
+            <h5>Acer Rebrand</h5>
+            <ul><li><a href="http://home.cloud.acer.com/circos/">Circo S</a></li></ul>
             <div class="h-30"></div>
         </div>
     </div>
