--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
                                     <span>Sweet tooth</span>
-                                    <em>App / UI / 100 Daily UI</em>
+                                    <em>App / UI</em>
                                 </div>
                             </div>
                         </div>
@@ -129,7 +129,7 @@
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
                                     <span>Circo</span>
-                                    <em>Website / UI</em>
+                                    <em>Website</em>
                                 </div>
                             </div>
                         </div>
@@ -154,14 +154,14 @@
                 <!-- end single work -->
 
                 <!-- single work -->
-                <div class="col-md-3 col-sm-6 webbanner">
-                    <a href="banner_1.html" class="portfolio_item">
-                        <img src="img/tableware_1.jpg" alt="image" class="img-responsive" />
+                <div class="col-md-3 col-sm-6 web dm">
+                    <a href="ips.html" class="portfolio_item">
+                        <img src="img/ips.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Tableware</span>
-                                    <em>Banner</em>
+                                    <span>Athentek</span>
+                                    <em>Website / DM</em>
                                 </div>
                             </div>
                         </div>
@@ -171,8 +171,8 @@
 
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6 webbanner">
-                    <a href="banner_2.html" class="portfolio_item">
-                        <img src="img/tableware_2.jpg" alt="image" class="img-responsive" />
+                    <a href="banner_1.html" class="portfolio_item">
+                        <img src="img/tableware_1.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
@@ -218,14 +218,14 @@
                 <!-- end single work -->
 
                 <!-- single work -->
-                <div class="col-md-3 col-sm-6 package">
+                <div class="col-md-3 col-sm-6 package dm">
                     <a href="at502.html" class="portfolio_item">
                         <img src="img/at502.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
                                     <span>Circo S</span>
-                                    <em>Package / Photography</em>
+                                    <em>Package / Photography / DM</em>
                                 </div>
                             </div>
                         </div>
