--- a/ips.html
+++ b/ips.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Circo S Package Design / Photography / DM</title>
+    <title>Website / DM Design</title>
     <link rel="icon" href="img/fav.png" type="image/x-icon">
 
     <!-- Bootstrap -->
@@ -49,44 +49,39 @@
     <!-- main-container -->
     <div class="container main-container">
         <div class="col-md-12">
-            <img src="img/at502_1920.jpg" alt="" class="img-responsive" />
+            <img src="img/ips_1920.jpg" alt="" class="img-responsive" />
             <div class="h-30"></div>
         </div>
 
         <div class="col-md-12">
-            <h3 class="text-uppercase">Circo S</h3>
-            <h5>Package / Photography / DM</h5>
+            <h3 class="text-uppercase">Athentek Website / DM</h3>
+            <h5>UI / UX Design</h5>
             <div class="h-30"></div>
         </div>
 
         <div class="col-md-9">
-            <p>Use the triangle design of emergency help button of Circo S device as symbol. Design maps and pins on the outlook of the box. </p>
-        </div>
-
-        <div class="col-md-3">
-            <ul class="cat-ul">
-                <li><i class="ion-ios-circle-filled"></i> 2016</li>
-                <li><i class="ion-ios-circle-filled"></i> Photoshop, Illustrator</li>
-            </ul>
-            <div class="h-10"></div>
+           <p>Athentek SLaaS website.</p>
+           <p>Indoor Positioning Service brochure</p>
             
         </div>
         <br>
-        <div class="col-md-12">
-            <img src="img/at502_a.jpg" alt="" class="img-responsive" />
-            <br>
-            <img src="img/at502_b.jpg" alt="" class="img-responsive" />
-            <br>
-            <img src="img/at502_c.jpg" alt="" class="img-responsive" />
-            <div class="h-30"></div>
+        <div class="col-md-3">
+            <ul class="cat-ul">
+                <li><i class="ion-ios-circle-filled"></i> 2017</li>
+                <li><i class="ion-ios-circle-filled"></i> Sketch, Photoshop, Illustrator</li>
+            </ul>
+            <div class="h-10"></div>
         </div>
-        <div class="col-md-12">
-            <h5>Where to buy</h5>
-            <ul><li><a href="https://www.alibaba.com/product-detail/Easy-To-Use-Accurate-Small-Indoor_60524709300.html?spm=a2700.7724838.0.0.XR21EJ">Alibaba</a></li></ul>
-            <h5>Acer Rebrand</h5>
-            <ul><li><a href="http://home.cloud.acer.com/circos/">Circo S</a></li></ul>
-            <div class="h-30"></div>
+        <div class="col-md-9">
+            <img src="img/ips_a.jpg" alt="" class="img-responsive" />
+             <img src="img/ips_b.jpg" alt="" class="img-responsive" />
+              <h5>Link</h5>
+            <ul>
+                <li><a href="http://www.athentek.com/" target="_blank">Athentek</a></li>
+            </ul>
+             <div class="h-30"></div>
         </div>
+       
     </div>
     <!-- end main-container -->
 
