--- a/ips.html
+++ b/ips.html
@@ -61,7 +61,7 @@
 
         <div class="col-md-9">
            <p>Athentek SLaaS website.</p>
-           <p>Indoor Positioning Service brochure</p>
+           <p>Indoor Positioning Service brochure.</p>
             
         </div>
         <br>
