--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <ul class="social-ul">
                 <li class="box-social"><a href="https://www.linkedin.com/in/yuhsinwang/" target="_blank"><i class="ion-social-linkedin"></i></a></li>
                 <li class="box-social"><a href="https://www.pinterest.com/horo3355/" target="_blank"><i class="ion-social-pinterest"></i></a></li>
+                <li class="box-social"><a href="https://www.instagram.com/yuhsin33/" target="_blank"><i class="ion-social-instagram"></i></a></li>
             </ul>
 
 
