--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
        
         <h1 class="box-headline letters rotate-2">
                     <span class="box-words-wrapper">
-                        <b class="is-visible">UI&nbsp;design.</b>
+                        <b class="is-visible">UX&nbsp;design.</b>
+                        <b>&nbsp;UI&nbsp;design.</b>
                         <b>&nbsp;graphic.</b>
                     </span>
                 </h1>
@@ -82,10 +83,9 @@
            <h3 class="uppercase">About Me </h3>
            <h5>Hi, I'm YuHsin</h5>
            <div class="h-30"></div>
-            <p>I graduated from National Taiwan University of Arts in 2010.</P>
-            <P>My major was Visual Communication Design.</p>
-            <P>I am an UX/UI Designer. I currently work as a UI designer at Athentek.</P>
-            <p>I specialize in App UI and UX design and the visual design of websites.</p>
+            <p>I am a passionate UXUI Designer based in Taipei.</P>
+            <p>I take on projects of all sizes; from digital product design, to mobile app product and web design.</p>
+            <p>I have the more than 2 years experience that tackle long-term design projects and remote collaboration between multi-background teams. I can not only deliver design requests, but also the enrich the design depth and culture of the team.</p>
             <div class="contact-info">
                 <p><i class="ion-android-call"></i> +886 919 696 578 </p>
                 <p><i class="ion-ios-email"></i> horo3355@gmail.com </p>
@@ -116,23 +116,105 @@
     <div class="portfolio-div">
         <div class="portfolio">
             <div class="no-padding portfolio_container">
-                <!-- single work -->
+
+                <!-- single work 1 -->
                 <div class="col-md-3 col-sm-6  App">
                     <a href="sweettooth.html" class="portfolio_item">
-                        <img src="img/sweettooth.jpg" alt="image" class="img-responsive" />
+                        <img src="img/sweettooth_gray.png" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
                                     <span>Sweet tooth</span>
-                                    <em>App / UI</em>
+                                    <em>App</em>
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
-                <!-- end single work -->
+                <!-- end single work 1 -->
 
-                <!-- single work -->
+                <!-- single work 2 -->
+                <div class="col-md-3 col-sm-6 app">
+                    <a href="swc.html" class="portfolio_item">
+                        <img src="img/swc_02.jpg" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>SWC</span>
+                                    <em>App</em>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work 2 -->
+
+                <!-- single work 3 -->
+                          <div class="col-md-6 col-sm-12 app">
+                    <a href="ignitenet.html" class="portfolio_item">
+                        <img src="img/ignitenet.jpg" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>igniteNet</span>
+                                    <em>Web application</em>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work 3 -->
+
+                <!-- single work 4 -->
+                <div class="col-md-3 col-sm-6 app">
+                    <a href="irent.html" class="portfolio_item">
+                        <img src="img/irent.jpg" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>iRent</span>
+                                    <em>App</em>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work 4 -->
+
+                <!-- single work 5 -->
+                <div class="col-md-3 col-sm-6 app">
+                    <a href="tms.html" class="portfolio_item">
+                        <img src="img/tms_1000_2.jpg" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>TMS</span>
+                                    <em>Website</em>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- end single work 5 -->
+
+                <!-- single work 6 -->
+                <div class="col-md-6 col-sm-12 App">
+                    <a href="circo_app.html" class="portfolio_item">
+                        <img src="img/circo.jpg" alt="image" class="img-responsive" />
+                        <div class="portfolio_item_hover">
+                            <div class="portfolio-border clearfix">
+                                <div class="item_info">
+                                    <span>Circo</span>
+                                    <em>App</em>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                
+                <!-- end single work 6 -->
+
+                <!-- single work 7 -->
                 <div class="col-md-3 col-sm-6 ads webui">
                     <a href="circo_web.html" class="portfolio_item">
                         <img src="img/circo_web.jpg" alt="image" class="img-responsive" />
@@ -145,26 +227,10 @@
                             </div>
                         </div>
                     </a>
-                </div>
-                <!-- end single work -->
+                </div>                
+                <!-- end single work 7 -->
 
-                <!-- single work -->
-                <div class="col-md-6 col-sm-12 App">
-                    <a href="circo_app.html" class="portfolio_item">
-                        <img src="img/circo.jpg" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>Circo</span>
-                                    <em>App / UI / UX</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work -->
-
-                <!-- single work -->
+                <!-- single work 8 -->
                 <div class="col-md-3 col-sm-6 web dm">
                     <a href="ips.html" class="portfolio_item">
                         <img src="img/ips.jpg" alt="image" class="img-responsive" />
@@ -178,57 +244,10 @@
                         </div>
                     </a>
                 </div>
-                <!-- end single work -->
 
-                <!-- single work -->
-                <div class="col-md-3 col-sm-6 webbanner">
-                    <a href="banner_1.html" class="portfolio_item">
-                        <img src="img/tableware_1.jpg" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>Tableware</span>
-                                    <em>Banner</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work -->
+                <!-- end single work 8 -->
 
-                <!-- single work -->
-                <div class="col-md-6 col-sm-12 app">
-                    <a href="irent.html" class="portfolio_item">
-                        <img src="img/irent.jpg" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>iRent</span>
-                                    <em>App / UI / UX</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work -->
-
-                <!-- single work -->
-                <div class="col-md-3 col-sm-6 package">
-                    <a href="at501.html" class="portfolio_item">
-                        <img src="img/at501.jpg" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>Circo</span>
-                                    <em>Package / Photography</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work -->
-
-                <!-- single work -->
+                <!-- single work 9 -->
                 <div class="col-md-3 col-sm-6 package dm">
                     <a href="at502.html" class="portfolio_item">
                         <img src="img/at502.jpg" alt="image" class="img-responsive" />
@@ -242,9 +261,9 @@
                         </div>
                     </a>
                 </div>
-                <!-- end single work -->
+                <!-- end single work 9 -->
 
-                <!-- single work -->
+                <!-- single work 10 -->
                 <div class="col-md-3 col-sm-6 illustration">
                     <a href="line_stamp.html" class="portfolio_item">
                         <img src="img/sloth.jpg" alt="image" class="img-responsive" />
@@ -258,23 +277,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- end single work -->
-
-                <!-- single work -->
-                <div class="col-md-3 col-sm-6 illustration">
-                    <a href="illustration.html" class="portfolio_item">
-                        <img src="img/tableware_3.jpg" alt="image" class="img-responsive" />
-                        <div class="portfolio_item_hover">
-                            <div class="portfolio-border clearfix">
-                                <div class="item_info">
-                                    <span>Tableware</span>
-                                    <em>Illustration</em>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- end single work -->
+                <!-- end single work 10 -->
             </div>
             <!-- end portfolio_container -->
         </div>
@@ -285,7 +288,7 @@
     <!-- footer -->
     <footer>
         <div class="container-fluid">
-            <p class="copyright">© YuHsin Wang 2017</p>
+            <p class="copyright">© YuHsin Wang 2019</p>
         </div>
     </footer>
     <!-- end footer -->
