--- a/tms.html
+++ b/tms.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Banner Design</title>
+    <title>TMS Website UI/UX Design</title>
     <link rel="icon" href="img/fav.png" type="image/x-icon">
 
     <!-- Bootstrap -->
@@ -39,9 +39,9 @@
 </head>
 
 <body>
-    <div class="box-logo">
+     <div class="box-logo">
          <a href="index.html"><img src="img/logo.png" width="80" alt="Logo"></a>
-    </div>
+     </div>
     <!-- Preloader -->
     <div id="preloader">
         <div class="pre-container">
@@ -59,32 +59,48 @@
     <!-- main-container -->
     <div class="container main-container">
         <div class="col-md-12">
-            <img src="img/tableware_1_1920.jpg" alt="" class="img-responsive" />
-            <img src="img/tableware_2_a.jpg" alt="" class="img-responsive" />
-            <img src="img/tableware_2_1920.jpg" alt="" class="img-responsive" />
+            <img src="img/tms_1920.jpg" alt="" class="img-responsive" />
             <div class="h-30"></div>
         </div>
 
-        <div class="col-md-12">
-            <h3 class="text-uppercase">Midohouse Tableware Banner Design</h3>
-            <h5>Banner Design</h5>
+        <div class="col-md-12">TMS Website</h3>
+            <h5>UI / UX Design</h5>
             <div class="h-30"></div>
         </div>
 
         <div class="col-md-9">
-            <p>Develop the themes of marketing event.</p>
-            <p>Design and modify products images with Photoshop and Illustrator.</p>
+            <img src="img/tms_1920_2.jpg" alt="" class="img-responsive" />
+            <br>
+            <h4>Request</h4>
+            <ul>
+              <li>Design new visual style</li>
+              <li>Design new pages: Product, Contact, User setting, FAQ</li>
+            </ul>
         </div>
-
+        <div class="col-md-9">
+        <h4>My responisibility</h4>
+            <ul>
+              <li>Confirm request, problem statement and project goal with PO</li>
+              <li>Figure out the solution which take balance with project schedule, coding effort and PO's expectation</li>
+              <li>Coperate with developers, from confirm feasibilirt to polish deploymented design</li>
+              <li>Design flows which match user's intuition, iterate design style, redesign icons and define design guideline</li>
+            </ul>
+        </div>
         <div class="col-md-3">
             <ul class="cat-ul">
-                <li><i class="ion-ios-circle-filled"></i> 2014</li>
-                <li><i class="ion-ios-circle-filled"></i> Photoshop, Illustrator</li>
+                <li><i class="ion-ios-circle-filled"></i> 2019 </li>
+                <li><i class="ion-ios-circle-filled"></i> Sketch, Marvel, Zeplin </li>
             </ul>
             <div class="h-10"></div>
             
         </div>
-        
+        <div class="col-md-9">
+            <h4>Before Design</h4>
+            <img src="img/tms_before.jpg" alt="" class="img-responsive"/>
+            <br>
+            <h4>Iterated Design</h4>
+            <img src="img/tms_mockup.jpg" alt="" class="img-responsive"/>          
+        </div>
     </div>
     <!-- end main-container -->
 
