--- a/ignitenet.html
+++ b/ignitenet.html
@@ -59,7 +59,7 @@
     <!-- main-container -->
     <div class="container main-container">
         <div class="col-md-12">
-            <img src="img/irent_1920.jpg" alt="" class="img-responsive" />
+            <img src="img/ig_1920.jpg" alt="" class="img-responsive" />
             <div class="h-30"></div>
         </div>
 
@@ -69,60 +69,34 @@
         </div>
 
         <div class="col-md-9">
-            <p>iRent is an app which is used to book a rental car anywhere and anytime. </p>
-            <img src="img/irent_0.jpg" alt="" class="img-responsive" />
+            <p>IgniteNet’s Cloud Controller is for remote management, monitoring and trouble-shooting of multiple networks at a time.</p>
+            <img src="img/ig_2.jpg" alt="" class="img-responsive" />
             <br>
-            <h4>New Functions Added</h4>
+            <h4>My Responsibility</h4>
             <ul>
-              <li>Select the car rental location in map view or list view</li>
-              <li>Booking time and nearby location recommendation features are added to reduce the cases of reservations unavailable</li>
-              <li>Remotely locking/unlocking features are added</li>
-              <li>Different pick-up and drop-off spots for some specific locations (the same concept as Ubike)</li>
+              <li>Collaborate with product owner to confirm requests, define problem statements.</li>
+              <li>Run usability test to make sure the working flows are institute.</li>
+              <li>Design the UI which are clean and beautiful.</li>
+              <li>Interview users to learn their pain points, discuss with team members to itergrate the potential opportunities into product roadmap, help create features that address users’ needs.</li>
+              <li>Lead design team to defining design language, create design guideline which helps team members work efficiently.</li>
             </ul>
         </div>
 
         <div class="col-md-3">
             <ul class="cat-ul">
-                <li><i class="ion-ios-circle-filled"></i> 2018, 2019</li>
-                <li><i class="ion-ios-circle-filled"></i> Sketch </li>
+                <li><i class="ion-ios-circle-filled"></i> 2017~2019</li>
+                <li><i class="ion-ios-circle-filled"></i> Sketch, Marvel, Zeplin </li>
             </ul>
             <div class="h-10"></div>
             
         </div>
         <div class="col-md-9">
-            <h4>Before Revision</h4>
-            <img src="img/irent_a.jpg" alt="" class="img-responsive"/>
-            <h4>Redesign Points</h4>
+            <h4>Features</h4>
             <ul>
-              <li>There are up to eleven unarranged buttons making users inaccessible to the feature they need.</li>
-              <li>“Ongoing bookings” and “Completed bookings” sections were not clearly differentiated, making a lengthy page.</li>
-              <li>The booking information was arranged in time order where the newest one was put at the bottom of the list. Users have to scroll down the lengthy page to check their latest booking.</li>
+              <li>Add a new input field for user to take notes</li>
+              <li>Iterate the invitation process</li>
             </ul>
-            <br>
-            <h4>After Revision</h4>
-            <img src="img/irent_b.jpg" alt="" class="img-responsive"/>
-            <ul>
-              <li>Related iRent service information like “Location,” “Introduction,” and “Rating” are rearranged and combined under “About iRent” section. </li>
-              <li>Pick-up locations are represented in two ways: map view and list view.</li>
-            </ul>
-            <img src="img/irent_c.jpg" alt="" class="img-responsive"/>
-            <ul>
-              <li>Remove the logo underneath the status bar to increase the usable space.</li>
-              <li>Redesign the layout to create a more lucid interface.</li>
-              <li>The center one is the “Recommendation Booking Time” page (shown in the case when there is no available car for booking.) </li>
-            </ul>
-            <img src="img/irent_d.jpg" alt="" class="img-responsive"/>
-            <ul>
-              <li>Separate the ongoing and the completed bookings.</li>
-              <li>Buttons displayed on the page vary when the present status changes and accordingly creates different tasks for the users. </li>
-              <li>Functions of pickup, time extension, and return will be triggered only when orders have been placed or when rental cars are in use.</li>
-            </ul>
-            <br>
-            <h5>Download</h5>
-            <ul>
-            	<li><a href="https://itunes.apple.com/tw/app/irent-zi-zhu-zu-che/id860552248?l=zh" target="_blank">iOS</a></li>
-            	<li><a href="https://play.google.com/store/apps/details?id=com.cht.easyrent.irent&hl=zh-TW%E2%80%A8" target="_blank">ANDROID</a></li>
-            </ul>
+            
         </div>
     </div>
     <!-- end main-container -->
